# reflector-predict

./: .gitignore  Cargo.toml  Makefile  README.md
bun_scripts/: .gitignore  README.md  bun.lockb  cli.ts  package.json
bun_scripts/reflector-oracle-sdk/: README.md  package-lock.json  package.json
bun_scripts/reflector-oracle-sdk/src/: index.ts
bun_scripts/reflector-predict-sdk/: README.md  package-lock.json  package.json
bun_scripts/reflector-predict-sdk/src/: index.ts
bun_scripts/src/: bet.ts  index.ts  round.ts  utils.ts
bun_scripts/src/cmds/: assets.ts  login.ts
bun_scripts/src/cmds/bet/: lookup.ts  place.ts
bun_scripts/src/cmds/round/: claim.ts  lookup.ts  start.ts
bun_scripts/src/utils/: dynamic.ts  static.ts
contracts/reflector-predict/: Cargo.toml
contracts/reflector-predict/src/: lib.rs  reflector_oracle.rs  test.rs
